# makeup

./: .gitignore  DEPLOYMENT.md  README.md  start-beauty-studio.cmd  start-beauty-studio.ps1  start-gpupixel-native.cmd  美妆技能网站材料.txt
.agents/skills/beauty-coach/: SKILL.md
OpenHarness-main/.claude/skills/beauty/.clawhub/: origin.json
OpenHarness-main/.claude/skills/face-to-face-beauty/: README.md  SKILL.md  manifest.json  reference.md
OpenHarness-main/.claude/skills/face-to-face-beauty/params/: default.json
OpenHarness-main/.claude/skills/face-to-face-beauty/scripts/: pack.sh  run.py
OpenHarness-main/.claude/skills/face-to-face-beauty/workflow/: face-to-face-beauty.api.json
OpenHarness-main/.claude/skills/harness-memory/: SKILL.md
OpenHarness-main/.claude/skills/harness-mission/: SKILL.md
OpenHarness-main/.claude/skills/harness-verify/: SKILL.md
OpenHarness-main/.claude/skills/zhuchenggong-doubao-image-gen/.clawhub/: origin.json
OpenHarness-main/src/openharness/api/: openai_client.py
OpenHarness-main/src/openharness/tools/: base.py
OpenHarness-main/src/openharness/ui/: runtime.py
OpenHarness-main/tests/: repro_plhd_inline_tool.py  repro_tool_allowlist.py
OpenHarness-main/tests/test_api/: test_openai_client.py
beauty-studio-site/: OpenHarness.md  README.md  beauty-capabilities.js  beauty-capabilities.test.js  beauty-user-memory.js  beauty-user-memory.test.js  control-surface.test.js  current-frame-vision.js  current-frame-vision.test.js  gpupixel.md  mirror-voice.js  mirror-voice.test.js  openharness-bridge-events.js  openharness-bridge-events.test.js  openharness-prompt.js  openharness-prompt.test.js  server.js  stream-asr-adapter.js  tts-fallback.test.js  tts-sanitize.test.js  user-memory-server-wiring.test.js  voice-realtime-phase1-plan.md  volcengine-tts.js  volcengine-tts.test.js
beauty-studio-site/public/: app.js  index.html  styles.css
beauty-studio-site/public/audio/: asr-adapter.js  audio-input-manager.js  conversation-orchestrator.js  tts-adapter.js  vad-manager.js
deployment/: BUNDLE-CONTENTS.md  SECURITY-NOTICE.md  build-development-bundle.cmd  build-development-bundle.ps1  bundle-exclude.txt  bundle-include.txt  check-prerequisites.ps1  install-development-bundle.cmd  install-development-bundle.ps1  verify-deployment.cmd  verify-deployment.ps1
deployment/environment/: openharness-environment.yml  openharness-requirements.txt  toolchain-versions.txt
deprecated-old-beauty-modules/PixelFreeEffects-master/: README.md  README_en.md
deprecated-old-beauty-modules/PixelFreeEffects-master/SMBeautyEngine_flutter/pixelfree/: CHANGELOG.md  LICENSE  README.md
deprecated-old-beauty-modules/PixelFreeEffects-master/SMBeautyEngine_iOS/PixelFree.framework/Headers/: SMPixelFree.h  pixelFree_c.hpp
deprecated-old-beauty-modules/PixelFreeEffects-master/SMBeautyEngine_iOS/SMBeautyEngine_iOS/: ViewController.m
deprecated-old-beauty-modules/PixelFreeEffects-master/SMBeautyEngine_iOS/SMBeautyEngine_iOS.xcodeproj/: project.pbxproj
deprecated-old-beauty-modules/PixelFreeEffects-master/SMBeautyEngine_iOS/SMBeautyEngine_iOS.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
deprecated-old-beauty-modules/PixelFreeEffects-master/SMBeautyEngine_iOS/SMBeautyEngine_iOS.xcworkspace/xcuserdata/user.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
deprecated-old-beauty-modules/PixelFreeEffects-master/SMBeautyEngine_uniapp/: README.md
deprecated-old-beauty-modules/PixelFreeEffects-master/SMBeautyEngine_win_python/: main.py
deprecated-old-beauty-modules/PixelFreeEffects-master/doc/: PreprocessorFixfree.java  api_android.md  api_c.md  api_flutter.md  api_iOS.md  doc_android.md  doc_c.md  doc_flutter.md  doc_iOS.md  doc_windows.md  release_note.md
docs/superpowers/plans/: 2026-06-24-freeze-lipstick-hide-voice-selector.md  2026-06-24-openharness-visual-tool.md  2026-06-24-warm-mirror-voice.md  2026-06-25-golden-development-bundle.md
docs/superpowers/specs/: 2026-06-24-freeze-lipstick-hide-voice-selector-design.md  2026-06-24-openharness-visual-tool-design.md  2026-06-24-warm-mirror-voice-design.md  2026-06-25-golden-development-bundle-design.md
gpupixel-main/: claude-progress.md  feature_list.json  gpupixel_analysis.md  session-handoff.md  start_video_client.cmd  start_video_client_mediapipe.cmd
gpupixel-main/demo/: CMakeLists.txt
gpupixel-main/demo/desktop/: app.cc  eyebrow_renderer_mp468.cc  eyebrow_renderer_mp468.h  lip_renderer_mp468.cc  lip_renderer_mp468.h  processor.cc  processor_mp468.cc  processor_mp468_daemon.cc  video_client_mp468.cc
gpupixel-main/desktop_mediapipe_bridge/: bridge.js  bridge_server.py  index.html
gpupixel-main/docs/: MP468_video_fps_optimization.md  MP468_视频流Demo实施说明.md  windows_video_client_mediapipe_bridge.md  windows_video_client_mvp.md
gpupixel-main/include/gpupixel/filter/: face_reshape_filter.h
gpupixel-main/src/filter/: face_reshape_filter.cc
gpupixel-main/web_demo/: app.js  index.html  processor_server.py  start_web_demo.cmd
gpupixel-main/web_demo_mp468/: app.js  index.html  processor_server.py  start_web_demo.cmd  styles.css
gpupixel-main/web_demo_mp468_video/: app.js  index.html  processor_server.py  start_web_demo.cmd  styles.css
gpupixel-service/: README.md  server.js
jhx/web_demo/web_demo/: README.md  agent_tools.py  app.js  command_parser.mjs  cosmetics.json  drawer_demo.css  drawer_demo.html  drawer_demo.js  index.html  rules.py  server.py  speech_adapters.mjs  start_demo.cmd  start_demo.ps1  stop_demo.cmd  stop_demo.ps1  styles.css  tracking.mjs
jhx/web_demo/web_demo/tests/: test_agent_stream.py  test_agent_tools.py  test_cleanup.py  test_command_parser.mjs  test_rules.py  test_speech_adapters.mjs  test_stream.py  test_tracking.mjs
jhx/美妆AI智能体项目计划/: 美妆AI智能体项目计划.md
jhx/计划/: 阶段2计划.md  阶段3计划.md  阶段4计划.md  阶段5计划.md  阶段6F计划.md  阶段6计划.md  阶段7计划.md
local-asr-service/: download_model.py  server.py
local-tts-service/: server.py
local-tts-service/winrt-tts/: Program.cs  WinRtLocalTts.csproj
(+2 files in other folders)
